dist_man1_MANS=

if BUILD_GLOBALBOOSTD
  dist_man1_MANS+=globalboostd.1
endif

if ENABLE_QT
  dist_man1_MANS+=globalboost-qt.1
endif

if BUILD_GLOBALBOOST_CLI
  dist_man1_MANS+=globalboost-cli.1
endif

if BUILD_GLOBALBOOST_TX
  dist_man1_MANS+=globalboost-tx.1
endif

if BUILD_GLOBALBOOST_UTIL
  dist_man1_MANS+=globalboost-util.1
endif

if ENABLE_WALLET
if BUILD_GLOBALBOOST_WALLET
  dist_man1_MANS+=globalboost-wallet.1
endif
endif
